--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <div id="app"></div>
 
     <!-- Sensor overlay + (iOS) permission button -->
-    <div id="sensorOverlay">orientation: (waiting…)</div>
+    <!-- <div id="sensorOverlay">orientation: (waiting…)</div> -->
     <button id="sensorPermissionBtn">Enable Motion Sensors</button>
 
     <script type="module" src="/src/main.js"></script>
